--- a/part-1/6-css-properties/styles.css
+++ b/part-1/6-css-properties/styles.css
@@ -1,1 +1,22 @@
-/* Add your CSS code below */
+a {
+  text-decoration: none;
+  color: red;
+  font-weight: bold;
+}
+.message__time {
+  font-size: 0.9rem;
+}
+
+div .message--unread > p.message__content {
+  border-left: 5px solid blue;
+  padding-left: 10px;
+}
+
+div .messages > div.message:nth-child(1) p {
+  opacity: 0.5;
+}
+
+.message__author,
+.message__time {
+  line-height: 50px;
+}
