--- a/part-2/17-nav-menu/styles.css
+++ b/part-2/17-nav-menu/styles.css
@@ -1,1 +1,124 @@
-/* Write your media queries and flexbox CSS below */
+body {
+  background-color: rgb(77, 57, 57);
+}
+
+.site-wrapper {
+  background-color: white;
+  margin: 20px;
+  height: 400px;
+}
+
+.site-header__logo {
+  margin-left: 30px;
+  margin-top: 30px;
+  width: 100px;
+}
+
+.site-header__nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.site-header__navItem,
+.site-header__checkout {
+  text-decoration: none;
+  font-weight: bold;
+  color: blue;
+  margin-left: 30px;
+  margin-top: 35px;
+}
+
+.site-header__navItem--highlighted {
+  color: rgb(204, 25, 150);
+  margin-bottom: 30px;
+}
+
+.site-header__checkout {
+  background-color: blue;
+  color: white;
+  padding: 10px;
+}
+
+@media only screen and (min-width: 480px) {
+  .site-header {
+    display: flex;
+    flex-direction: column;
+  }
+  nav.site-header__nav > a:nth-child(1) {
+  }
+
+  nav.site-header__nav > a:nth-child(2) {
+    margin-left: 180px;
+    margin-top: -20px;
+    width: 100%;
+  }
+
+  nav.site-header__nav > a:nth-child(3) {
+    margin-left: 350px;
+    margin-top: -20px;
+    width: 100%;
+  }
+
+  .site-header__checkout {
+    width: 100px;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 700px) {
+  .site-header {
+    display: flex;
+    margin: 0;
+  }
+
+  nav.site-header__nav > a:nth-child(1) {
+    margin-top: -50px;
+    margin-left: 250px;
+  }
+
+  nav.site-header__nav > a:nth-child(2) {
+    margin-left: 450px;
+    margin-top: -20px;
+  }
+
+  nav.site-header__nav > a:nth-child(3) {
+    margin-left: 660px;
+    margin-top: -20px;
+  }
+
+  .site-header__checkout {
+    margin-left: 830px;
+    margin-top: -60px;
+    padding: 10px;
+    height: 20px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .site-header {
+    display: flex;
+    margin: 0;
+  }
+
+  nav.site-header__nav > a:nth-child(1) {
+    margin-top: -50px;
+    margin-left: 250px;
+  }
+
+  nav.site-header__nav > a:nth-child(2) {
+    margin-left: 450px;
+    margin-top: -20px;
+  }
+
+  nav.site-header__nav > a:nth-child(3) {
+    margin-left: 700px;
+    margin-top: -20px;
+  }
+
+  .site-header__checkout {
+    margin-left: 900px;
+    margin-top: -60px;
+    padding: 10px;
+    height: 20px;
+  }
+}
