--- a/part-3/29-combined-skills/styles.css
+++ b/part-3/29-combined-skills/styles.css
@@ -55,6 +55,47 @@ span.author {
   }
 }
 
+@media only screen and (min-width: 767px) {
+  .main-nav__list {
+    display: flex;
+    flex-direction: column;
+  }
+  nav.main-nav__list > li.main-nav__list-item {
+    margin-left: 200px;
+    margin-top: -50px;
+  }
+
+  #search-input {
+    margin-left: 850px;
+    margin-top: -100px;
+  }
+}
+
+@media only screen and (min-width: 767px) {
+  .views {
+    display: flex;
+    margin: 0;
+  }
+
+  div.views > a:nth-child(3) {
+    margin-top: 25px;
+    margin-left: 30px;
+  }
+
+  div.views > a:nth-child(2) {
+    margin-top: 25px;
+  }
+  div.views > a:nth-child(4) {
+    margin-top: 25px;
+    margin-left: 850px;
+  }
+}
+
+.views__all,
+.view-list__item {
+  text-decoration: none;
+}
+
 li.main-nav__list-item a {
   text-decoration: none;
   color: blue;
